--- a/css/styles_main.css
+++ b/css/styles_main.css
@@ -61,8 +61,10 @@ main
 
     padding-inline:     1rem;
     padding-block:      1rem;
-
+    
     border-radius:      18px;
+    box-shadow: 
+        0px 6px 12px 0 rgba(0, 0, 0, 0.25);
 }
 
 
