--- a/css/styles_main.css
+++ b/css/styles_main.css
@@ -63,8 +63,7 @@ main
     padding-block:      1rem;
     
     border-radius:      18px;
-    box-shadow: 
-        0px 6px 12px 0 rgba(0, 0, 0, 0.25);
+    box-shadow:         var(--qr-block-shadow);
 }
 
 
